--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-dom": "^17.0.1",
         "react-feather": "^2.0.9",
         "react-hook-form": "^6.15.4",
+        "react-icons": "^4.3.1",
         "react-masonry-component": "^6.2.1",
         "react-owl-carousel3": "^2.2.5",
         "react-redux": "^7.1.0",
