--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "animate.css": "^4.1.1",
         "axios": "^0.21.1",
+        "dotenv": "^10.0.0",
         "next": "^10.0.7",
         "nodemailer": "^6.5.0",
         "nodemailer-sendgrid-transport": "^0.2.0",
