add checkout & review page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     },
     "author": "EnvyTheme.com",
     "dependencies": {
+        "@emotion/react": "^11.6.0",
+        "@emotion/styled": "^11.6.0",
+        "@mui/material": "^5.1.1",
         "animate.css": "^4.1.1",
         "axios": "^0.21.1",
         "dotenv": "^10.0.0",
