--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     },
     "author": "EnvyTheme.com",
     "dependencies": {
+        "@apollo/client": "^3.3.11",
         "@emotion/react": "^11.6.0",
         "@emotion/styled": "^11.6.0",
         "@mui/material": "^5.1.1",
         "animate.css": "^4.1.1",
         "axios": "^0.21.1",
+        "cross-fetch": "^3.1.4",
         "dotenv": "^10.0.0",
+        "graphql": "^16.0.1",
         "next": "^10.0.7",
         "nodemailer": "^6.5.0",
         "nodemailer-sendgrid-transport": "^0.2.0",
@@ -26,6 +29,7 @@
         "react-hook-form": "^6.15.4",
         "react-icons": "^4.3.1",
         "react-masonry-component": "^6.2.1",
+        "react-number-format": "^4.8.0",
         "react-owl-carousel3": "^2.2.5",
         "react-redux": "^7.1.0",
         "react-slick": "^0.28.0",
@@ -35,6 +39,7 @@
         "redux": "^3.6.0",
         "redux-devtools-extension": "^2.13.2",
         "sass": "^1.32.7",
+        "sweetalert": "^2.1.2",
         "sweetalert2": "^10.15.5",
         "sweetalert2-react-content": "^3.3.1"
     },
