--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "dotenv": "^10.0.0",
         "graphql": "^16.0.1",
         "next": "^10.0.7",
+        "midtrans-client": "^1.2.3",
+        "midtrans-payment": "^1.2.7",
         "nodemailer": "^6.5.0",
         "nodemailer-sendgrid-transport": "^0.2.0",
         "react": "^17.0.1",
