--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
         "@emotion/react": "^11.6.0",
         "@emotion/styled": "^11.6.0",
         "@mui/material": "^5.1.1",
+        "@nextui-org/react": "^1.0.1-alpha.57",
         "animate.css": "^4.1.1",
         "axios": "^0.21.1",
         "cross-fetch": "^3.1.4",
         "dotenv": "^10.0.0",
+        "formik": "^2.2.9",
         "graphql": "^16.0.1",
-        "next": "^10.0.7",
         "midtrans-client": "^1.2.3",
         "midtrans-payment": "^1.2.7",
+        "next": "^10.0.7",
         "nodemailer": "^6.5.0",
         "nodemailer-sendgrid-transport": "^0.2.0",
         "react": "^17.0.1",
